Optioal algorithm variables to requests. Demo UI view for setting algorithm profiles with variables.
